--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
 
 <style type="text/css">
 
+body {
+	
+	background: url("media/combs.jpg"), #ebebeb;
+    background-position: right bottom;
+    background-repeat: no-repeat;
+    
+}
+
+.circle {
+
+	width: 100px;
+	height: 100px;
+	background: url("media/wood.jpg");
+	background-repeat: repeat;
+	border-radius: 50%
+
+}
+
 </style>
 
 <body>
 
 <h1>
+
+<div class="circle"></div>
 
 <font face="Arial Black" color="#efec23">
     Willowbrook Honey
