--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {
 	background: url("media/combs.jpg"), #ebebeb;
     background-position: right bottom;
     background-repeat: no-repeat;
+	background-size: auto auto;
     
 }
 
