--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <nav>
     <a class="nav_button highlight" href="index.html"> Home </a>
-    <a class="nav_button highlight" href="index.html"> Contact </a>
-	<a class="nav_button highlight" href="index.html"> Order </a>
+    <a class="nav_button highlight" href="index.html"> Inventory </a>
+	<a class="nav_button highlight" href="order.html"> Order </a>
 
 <h1>
 <a href="index.html">
