--- a/inven.html
+++ b/inven.html
@@ -20,8 +20,19 @@
 </a>
 </h1>
 
-<div class="content"></div>
+<div class="content" align="left">
+<h2> <u> Inventory </u> </h2>
+
+<img src="media/honey.png" alt="Honey" style="width:100px;height:auto;">
+<img src="media/honeycomb.png" alt="Honey Comb" style="width:88px;height:auto;">
+<img src="media/cream.png" alt="Cream Honey" style="width:125px;height:auto;">
+
+</div>
 
 </body>
 
 </html>
+
+<script>
+
+</script>
