--- a/order.html
+++ b/order.html
@@ -34,28 +34,30 @@ When:
 </div>
 <font color="#ffc73b">
 <img src="media/gallon.png" alt="Gallon" style="width:20px;height:auto;">
-Gallon: <input type="number" id="gallon" value="0" min="0"><br>
+Gallon $<div id="gallonPrice"></div> :
+<input type="number" id="gallon" value="0" min="0" onchange="updateTotal()"><br>
 <img src="media/honey.png" alt="Honey" style="width:20px;height:auto;">
-1LB Bottle: <input type="number" id="1lb" value="0" min="0">
+1LB Bottle $<div id="1lbPrice"></div> :
+<input type="number" id="1lb" value="0" min="0" onchange="updateTotal()">
 <img src="media/honey.png" alt="Honey" style="width:20px;height:auto;">
-1/2LB Bottle: <input type="number" id="halflb" value="0" min="0"><br>
+1/2LB Bottle $<div id="halflbPrice"></div> :
+<input type="number" id="halflb" value="0" min="0" onchange="updateTotal()"><br>
 <img src="media/honeycomb.png" alt="Honey Comb" style="width:20px;height:auto;">
-Comb Honey: <input type="number" id="comb" value="0" min="0">
+Comb Honey $<div id="combPrice"></div> :
+<input type="number" id="comb" value="0" min="0" onchange="updateTotal()">
 <img src="media/cream.png" alt="Cream Honey" style="width:28px;height:auto;">
-Creamed Honey: <input type="number" id="creamed" value="0" min="0"><br>
+Creamed Honey $<div id="creamedPrice"></div> :
+<input type="number" id="creamed" value="0" min="0" onchange="updateTotal()"><br>
 </font>
 Extra Information:<br> <textarea rows="8" cols="75" id="extraInfo"></textarea><br><br>
+
+Total Price: $<div id="price">0.00</div>
+
 <input type="button" value="Send" name="send" onClick="sendEmail()">
 
 </form>
 
-<div id="test">
-Test
 </div>
-
-</div>
-
-
 
 </body>
 
@@ -63,22 +65,57 @@ Test
 
 <script>
 
-$(document).ready(function() {
-	$.ajax({
-		url : "https://willowbrookhoney.com/media/test.txt",
-		dataType: "text",
-		success : function (data) {
-			$("#test").html(data);
+var inven = [[0.0, 0], [0.0, 0], [0.0, 0], [0.0, 0], [0.0, 0]];
+
+$.ajax({
+    url: "https://www.willowbrookhoney.com/media/inventory.csv",
+    success: function (data) {
+		data = data.split("\n");
+		for (var i = 0; i < inven.length && i < data.length - 1; i++) {
+			var row = data[i+1].split(",");
+			inven[i][0] = parseFloat(row[1]);
+			inven[i][1] = parseInt(row[2]);
 		}
-	});
-});
+		updatePrices();
+		updateTotal();
+    },
+    dataType: "text",
+    });
+	
+function changeText(id, text){
+	document.getElementById(id).innerHTML = text;
+}
+
+function updatePrices() {
+	changeText("gallonPrice", "" + inven[0][0] + "<i>(Stock: " + inven[0][1] + ")</i>");
+	changeText("1lbPrice", "" + inven[1][0] + "<i>(Stock: " + inven[1][1] + ")</i>");
+	changeText("halflbPrice", "" + inven[2][0] + "<i>(Stock: " + inven[2][1] + ")</i>");
+	changeText("combPrice", "" + inven[3][0] + "<i>(Stock: " + inven[3][1] + ")</i>");
+	changeText("creamedPrice", "" + inven[4][0] + "<i>(Stock: " + inven[4][1] + ")</i>");
+}
+
+function updateTotal(){
+	var totalPrice = 0.0;
+	totalPrice += inven[0][0] * document.getElementById("gallon").value;
+	totalPrice += inven[1][0] * document.getElementById("1lb").value;
+	totalPrice += inven[2][0] * document.getElementById("halflb").value;
+	totalPrice += inven[3][0] * document.getElementById("comb").value;
+	totalPrice += inven[4][0] * document.getElementById("creamed").value;
+	changeText("price", "" + totalPrice);
+}
 
 function sendEmail(){
-	var email = "landon.ellis2@gmail.com";
+	var email = "ericleslie4@gmail.com";
 	var subj = "Willowbrook Honey Order";
 	var body = "Name: " + document.getElementById("name").value + "\nPhone: " + document.getElementById("phone").value;
 	body += "\nWhen: " + (document.getElementById("ASAP").checked ? "ASAP" : "Next Season");
 	body += "\nExtra Information: " + document.getElementById("extraInfo").value;
+	body += "\n\nGallons @ $" + inven[0][0] + " each: " + document.getElementById("gallon").value;
+	body += "\n1LB @ $" + inven[1][0] + " each: " + document.getElementById("1lb").value;
+	body += "\n1/2 LB @ $" + inven[2][0] + " each: " + document.getElementById("halflb").value;
+	body += "\nComb Honey @ $" + inven[3][0] + " each: " + document.getElementById("comb").value;
+	body += "\nCreamed Honey @ $" + inven[4][0] + " each: " + document.getElementById("creamed").value;
+	body += "\n\nTotal: $" + document.getElementById("price").innerHTML;
 	body = encodeURIComponent(body);
 	document.location = "mailto:"+email+"?subject="+subj+"&body="+body;
 }
