Front & Image update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
 </a>
 </h1>
 
-<div class="content"></div>
+<div class="content" align="left">
+<div style="padding:40px">
+<img src="media/tent.jpg" style="box-shadow:0 8px 16px 0 rgba(0,0,0,0.4), 0 12px 40px 0 rgba(0,0,0,0.19);">
+<br>
+<div style="width:50%;margin-left:10px;padding-top:20px;padding-bottom:20px;">
+Willowbrook Honey
+<span style="color:#dede02;">
+is a local family beekeeping business in Terre Haute, Indiana owned and operated by brothers Eric and Mark Ellis.
+They have been selling honey for X years and appeared at the 2019 Berry Bash as pictured below.
+If you are interested in ordering or contacting, please visit the Order page.
+</span>
+</div>
+<img src="media/berryBash.jpg" style="height:300px;border-radius:100%;box-shadow:0 8px 16px 0 rgba(0,0,0,0.6), 0 12px 40px 0 rgba(0,0,0,0.19);">
+</div>
+</div>
 
 </body>
 
