--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
 <div class="combs"></div>
 <div class="bar"></div>
 
-<nav>
-    <a class="nav_button highlight" href="index.html"> Home </a>
-    <a class="nav_button highlight" href="inven.html"> Inventory </a>
-	<a class="nav_button highlight" href="order.html"> Order </a>
-
-<h1>
 <a href="index.html">
 <font id="logo" class="logo highlight" face="Arial Black"> Willowbrook Honey </font>
 </a>
-</h1>
 
-<div class="content" align="left">
+<span class="nav_bar" style="display:inline-block;">
+	<a class="nav_button highlight" href="index.html"> Home </a>
+	<a class="nav_button highlight" href="inven.html"> Inventory </a>
+	<a class="nav_button highlight" href="order.html"> Order </a>
+</span>
+
+<div class="content" align="center">
 <div style="padding:40px">
-<img src="media/tent.jpg" style="box-shadow:0 8px 16px 0 rgba(0,0,0,0.4), 0 12px 40px 0 rgba(0,0,0,0.19);">
+<img src="media/berryBash.jpg" style="max-width:100%;width:685px;border-radius:100%;box-shadow:0 8px 16px 0 rgba(0,0,0,0.6), 0 12px 40px 0 rgba(0,0,0,0.19);">
 <br>
 <div style="width:50%;margin-left:10px;padding-top:20px;padding-bottom:20px;">
 Willowbrook Honey
@@ -32,7 +31,7 @@ They have been selling honey for 7 years and appeared at the 2019 Berry Bash as 
 If you are interested in ordering or contacting, please visit the Order page.
 </span>
 </div>
-<img src="media/berryBash.jpg" style="height:300px;border-radius:100%;box-shadow:0 8px 16px 0 rgba(0,0,0,0.6), 0 12px 40px 0 rgba(0,0,0,0.19);">
+<img src="media/tent.jpg" style="box-shadow:0 8px 16px 0 rgba(0,0,0,0.4), 0 12px 40px 0 rgba(0,0,0,0.19);">
 </div>
 </div>
 
