--- a/inven.html
+++ b/inven.html
@@ -9,19 +9,19 @@
 <div class="combs"></div>
 <div class="bar"></div>
 
-<nav>
-    <a class="nav_button highlight" href="index.html"> Home </a>
-    <a class="nav_button highlight" href="inven.html"> Inventory </a>
-	<a class="nav_button highlight" href="order.html"> Order </a>
-
-<h1>
 <a href="index.html">
 <font id="logo" class="logo highlight" face="Arial Black"> Willowbrook Honey </font>
 </a>
-</h1>
 
-<div class="content" align="left" style="padding-left:40px;">
-<h2> <u> Inventory </u> </h2>
+<span class="nav_bar">
+	<a class="nav_button highlight" href="index.html"> Home </a>
+	<a class="nav_button highlight" href="inven.html"> Inventory </a>
+	<a class="nav_button highlight" href="order.html"> Order </a>
+</span>
+
+<div class="content" align="left">
+
+<div class="header"> <u> Inventory </u> </div>
 
 <span style="display: inline-block;">
 <img src="media/honey.png" alt="Honey" style="width:100px;padding-right:40px;">
@@ -40,6 +40,7 @@
 <br> Creamed Honey
 <br><i> (Stock: <span id="creamed"></span>) </i>
 </span>
+
 
 </div>
 
