--- a/order.html
+++ b/order.html
@@ -10,19 +10,18 @@
 <div class="combs"></div>
 <div class="bar"></div>
 
-<nav>
-    <a class="nav_button highlight" href="index.html"> Home </a>
-    <a class="nav_button highlight" href="inven.html"> Inventory </a>
-	<a class="nav_button highlight" href="order.html"> Order </a>
-
-<h1>
 <a href="index.html">
 <font id="logo" class="logo highlight" face="Arial Black"> Willowbrook Honey </font>
 </a>
-</h1>
+
+<span class="nav_bar">
+	<a class="nav_button highlight" href="index.html"> Home </a>
+	<a class="nav_button highlight" href="inven.html"> Inventory </a>
+	<a class="nav_button highlight" href="order.html"> Order </a>
+</span>
 
 <div class="content" align="left">
-<h2> <u> Order </u> </h2>
+<div class="header"> <u> Order </u> </div>
 
 <form>
 Name: <input type="text" id="name" required><br>
