--- a/inven.html
+++ b/inven.html
@@ -13,7 +13,7 @@
 <font id="logo" class="logo highlight" face="Arial Black"> Willowbrook Honey </font>
 </a>
 
-<span class="nav_bar">
+<span class="nav_bar" style="display:inline-block;">
 	<a class="nav_button highlight" href="index.html"> Home </a>
 	<a class="nav_button highlight" href="inven.html"> Inventory </a>
 	<a class="nav_button highlight" href="order.html"> Order </a>
