--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title> Willowbrook Honey </title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="slides.css">
 
 <body>
 
@@ -21,7 +22,23 @@
 
 <div class="content" align="center">
 <div style="padding:40px">
-<img src="media/berryBash.jpg" style="max-width:100%;width:685px;border-radius:100%;box-shadow:0 8px 16px 0 rgba(0,0,0,0.6), 0 12px 40px 0 rgba(0,0,0,0.19);">
+
+<div class="slideshow-container">
+	<img class="mySlides fade" src="media/home/hive.jpg">
+	<img class="mySlides fade" src="media/home/bees.jpg">
+	<img class="mySlides fade" src="media/home/berryBash.jpg">
+	<img class="mySlides fade" src="media/home/sunset.jpg">
+	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<div style="text-align:center" id="dot_elem">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
+
 <br>
 <div style="width:75%;margin-left:10px;padding-top:20px;padding-bottom:20px;">
 Willowbrook Honey
@@ -31,10 +48,52 @@ They have been selling honey for 7 years and appeared at the 2019 Berry Bash as 
 If you are interested in ordering or contacting, please visit the Order page.
 </span>
 </div>
-<img src="media/tent.jpg" style="box-shadow:0 8px 16px 0 rgba(0,0,0,0.4), 0 12px 40px 0 rgba(0,0,0,0.19);">
 </div>
 </div>
 
 </body>
 
 </html>
+
+<script>
+
+run();
+
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function run() {
+	var dot_elem = document.getElementById("dot_elem");
+	var dots = "";
+	var slides = document.getElementsByClassName("mySlides");
+	for (var i = 0; i < slides.length; i++) {
+		dots += "<span class=\"dot\" onclick=\"currentSlide(" + (i+1) + ")\"></span>\n";
+	}
+	dot_elem.innerHTML = dots;
+}
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1} 
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none"; 
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block"; 
+  dots[slideIndex-1].className += " active";
+}
+
+</script>
