--- a/inven.html
+++ b/inven.html
@@ -14,14 +14,14 @@
 </a>
 
 <span class="nav_bar" style="display:inline-block;">
-	<a class="nav_button highlight" href="index.html"> Home </a>
-	<a class="nav_button highlight" href="inven.html"> Inventory </a>
-	<a class="nav_button highlight" href="order.html"> Order </a>
+	<a class="nav_button highlight" href="inven.html"> Products </a>
+	<a class="nav_button highlight" href="order.html"> Shop </a>
+	<a class="nav_button highlight" href="gallery.html"> Gallery </a>
 </span>
 
 <div class="content" align="left">
 
-<div class="header"> <u> Inventory </u> </div>
+<div class="header"> <u> Products </u> </div>
 
 <span style="display: inline-block;">
 <img src="media/honey.png" alt="Honey" style="width:100px;padding-right:40px;">
