--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </a>
 
 <span class="nav_bar" style="display:inline-block;">
-	<a class="nav_button highlight" href="inven.html"> Products </a>
-	<a class="nav_button highlight" href="order.html"> Shop </a>
-	<a class="nav_button highlight" href="gallery.html"> Gallery </a>
+	<a class="nav_button highlight" href="honey.html"> Honey </a>
+	<a class="nav_button highlight" href="bees.html"> Bees </a>
+	<a class="nav_button highlight" href="learn.html"> Learn </a>
 </span>
 
 <div class="content" align="center">
