--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
 Willowbrook Honey
 <span style="color:#dede02;">
 is a local family beekeeping business in Terre Haute, Indiana owned and operated by brothers Eric and Mark Ellis.
-They have been selling honey for 7 years and appeared at the 2019 Berry Bash as pictured below.
-If you are interested in ordering or contacting, please visit the Order page.
+They have been selling honey for 7 years and appeared at the 2019 Berry Bash.
+If you are interested in ordering please visit the Honey page.
+<br> <br>
+Contact: <br>
+(812) 240-4257 <br>
+ericleslie4@gmail.com
 </span>
 </div>
 </div>
